Updated icons in header to match new identity. Fixed header getting too wide

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -179,20 +179,26 @@ a {
 }
 
 .navbar, .brand {
-    background-image: url('img/Trademark_OS.png');
-    width: 60px;
+    background-image: url('img/Trademark_bold.png');
+    width: 75px;
     margin-left: 5px;
+    margin-right: 15px;
     display: inline-block;
     float: left;
-    height: 45px;
+    height: 75px;
     background-size: contain;
     background-position: center left;
     background-repeat: no-repeat;
 }
 
+#navbar-contents {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 #header-title {
     color: dimgray;
-    font-size: 18px !important;
+    font-size: 32px !important;
     font-weight: 300 !important;
     margin-top: 10px;
     padding-top: 10px;
@@ -208,6 +214,7 @@ a {
     float: right;
     margin: 3px 0 0;
     margin-right: 10px;
+    margin-top: 12px;
 }
 
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, acronym, address, code, del, dfn, em, img, q, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
